<resources>
    <string name="app_name">ForeignCards</string>

    <!-- common -->
    <string name="button_close_text">Close</string>
    <string name="button_add_text">Add</string>
    <string name="button_remove_text">Remove</string>
    <string name="button_update">Update</string>
    <string name="button_next">Next</string>
    <string name="button_prev">Prev</string>
    <string name="button_show">Show</string>
    <string name="dialog_title_info">Info</string>

    <!-- activity main -->
    <string name="activity_main_train_empty_cards">[TBD] The deck is empty. Change rain deck.</string>

    <!-- activity add -->
    <string name="activity_add_word_hint">Word</string>
    <string name="activity_add_translation_hint">Translation</string>
    <string name="activity_add_transcription_hint">Transcription</string>
    <string name="activity_add_example_hint">Example</string>

    <!-- activity settings -->
    <string name="activity_settings_group_for_adding_label">Group for adding:</string>
    <string name="activity_settings_group_for_training_label">Group for training:</string>
    <string name="activity_settings_group_for_moving_1_label">Group for moving 1:</string>
    <string name="activity_settings_group_for_moving_2_label">Group for moving 2:</string>

    <!-- activity train -->
    <string name="at_button_move_to">Move to </string>
    <string name="at_button_move_to_template">Move to %d</string>
</resources>
