<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/text_word"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/text_transl"
        app:layout_constraintEnd_toEndOf="@+id/text_transc"
        app:layout_constraintStart_toStartOf="@+id/text_transl"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_transl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/text_transc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_word" />

    <EditText
        android:id="@+id/text_transc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/at_button_update"
        app:layout_constraintStart_toStartOf="@+id/text_transl"
        app:layout_constraintTop_toBottomOf="@+id/text_transl" />

    <EditText
        android:id="@+id/text_group"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/text_word"
        app:layout_constraintEnd_toEndOf="@+id/text_transl"
        app:layout_constraintTop_toTopOf="@+id/text_word"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="group"
        app:layout_constraintBottom_toTopOf="@+id/text_group"
        app:layout_constraintEnd_toEndOf="@+id/text_group"
        app:layout_constraintStart_toStartOf="@+id/text_group" />

    <Button
        android:id="@+id/at_button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_update"
        app:layout_constraintBottom_toBottomOf="@+id/text_transc"
        app:layout_constraintEnd_toEndOf="@+id/text_transl"
        app:layout_constraintTop_toTopOf="@+id/text_transc"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/at_button_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_prev"
        app:layout_constraintBottom_toBottomOf="@+id/at_button_show"
        app:layout_constraintStart_toStartOf="@+id/text_transl"
        app:layout_constraintTop_toTopOf="@+id/at_button_show"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/at_button_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/button_show"
        app:layout_constraintEnd_toStartOf="@+id/at_button_next"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@+id/at_button_prev"
        app:layout_constraintTop_toBottomOf="@+id/at_button_move_1" />

    <Button
        android:id="@+id/at_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_next"
        app:layout_constraintBottom_toBottomOf="@+id/at_button_show"
        app:layout_constraintEnd_toEndOf="@+id/text_transl"
        app:layout_constraintTop_toTopOf="@+id/at_button_show"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/at_button_move_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/at_button_move_to"
        app:layout_constraintEnd_toStartOf="@+id/at_button_move_2"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="@+id/text_transl"
        app:layout_constraintTop_toBottomOf="@+id/text_transc" />

    <Button
        android:id="@+id/at_button_move_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/at_button_move_to"
        app:layout_constraintBottom_toBottomOf="@+id/at_button_move_1"
        app:layout_constraintEnd_toEndOf="@+id/text_transl"
        app:layout_constraintStart_toEndOf="@+id/at_button_move_1"
        app:layout_constraintTop_toTopOf="@+id/at_button_move_1"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/at_button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/button_close_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/at_button_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_remove_text"
        app:layout_constraintBottom_toBottomOf="@+id/at_button_close"
        app:layout_constraintStart_toEndOf="@+id/at_button_close"
        app:layout_constraintTop_toTopOf="@+id/at_button_close"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>